--- a/app/views/category_templates/_form.html.erb
+++ b/app/views/category_templates/_form.html.erb
@@ -1,6 +1,6 @@
 <%= bootstrap_form_for @resource do |f| %>
   <%= f.text_field :template_name %>
-  <%= f.select :currency, CategoryTemplate::CURRENCY.map { |k, v| [k, v] }, selected: :first %>
+  <%= f.text_field :currency %>
   <table class="table">
     <thead>
       <tr>
