--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -22,28 +22,30 @@
           <div class="mb-3"><p><b>Type: </b> <%= @resource.product_type.name %></p></div>
         <% end %>
 
-        <table class="table">
-          <thead>
-            <tr>
-              <th>Day</th>
-              <th>Open Time</th>
-              <th>Close Time</th>
-            </tr>
-          </thead>
+        <% if @resource.timings.present? %>
+          <table class="table">
+            <thead>
+              <tr>
+                <th>Day</th>
+                <th>Open Time</th>
+                <th>Close Time</th>
+              </tr>
+            </thead>
 
-          <tbody>
-            <% Product::WEEK_DAYS.each do |day| %>
-              <% if @resource.timings.try(:[], day).try(:[], 'open_time').present? %>
-                <tr>
-                  <th><%= day %></th>
-                  <th><%= @resource.timings.try(:[], day).try(:[], 'open_time') %></th>
-                  <th><%= @resource.timings.try(:[], day).try(:[], 'close_time') %></th>
-                </tr>
+            <tbody>
+              <% Product::WEEK_DAYS.each do |day| %>
+                <% if @resource.timings.try(:[], day).present? %>
+                  <tr>
+                    <th><%= day %></th>
+                    <th><%= @resource.timings.try(:[], day).try(:[], 'open_time') %></th>
+                    <th><%= @resource.timings.try(:[], day).try(:[], 'close_time') %></th>
+                  </tr>
+                <% end %>
               <% end %>
-            <% end %>
 
-          </tbody>
-        </table>
+            </tbody>
+          </table>
+        <% end %>
 
 
         <% if @resource.google_map_link.present? %>
