--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -94,7 +94,7 @@
             <div class="d-block align-top">
               <% @resource.multiple_images.each do |image| %>
                 <div class="d-inline-block ">
-                  <%= image_tag image, class: 'product_image_size mr-3' %>
+                  <%= link_to(image_tag(image, class: 'product_image_size mr-3'), image, 'data-lightbox' => 'roadtrip') %>
                   <span class="d-block">
                     <%= link_to 'delete', delete_image_product_path(@resource, image),
                         method: :delete,
@@ -102,7 +102,8 @@
                   </span>
                 </div>
               <% end %>
-              <%= image_tag @resource.image, class: 'product_image_size mr-3' if @resource.image.attached? %>
+              <%= link_to(image_tag(@resource.image, class: 'product_image_size mr-3'), @resource.image, 'data-lightbox' => 'roadtrip') %>
+              <%#= image_tag @resource.image, class: 'product_image_size mr-3' if @resource.image.attached? %>
             </div>
         </div><br>
         <% if @resource.latitude.present? && @resource.longitude.present? %>
