--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -78,7 +78,7 @@
 
     <br>
     <% if @resource.persisted? %>
-      <%#= render 'map' %>
+      <%= render 'map' %>
     <% end %>
     <%= f.submit "Submit", class: 'btn btn-sm btn-success' %>
     <%= link_to "Back", products_path, class: 'btn btn-sm btn-info' %>
