--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -15,6 +15,8 @@
 
     <%= f.text_field :price, required: @template.is_price_optional?, label_class: @template.is_price_optional? ?  "required" : '' if @template.is_price? %>
 
+    <%= f.text_field :currency, required: @template.is_currency_optional?, label_class: @template.is_currency_optional? ?  "required" : '' if @template.is_currency? %>
+
     <%= f.text_area :description, required: @template.is_description_optional?, label_class: @template.is_description_optional? ?  "required" : '' if @template.is_description? %>
 
     <%= f.text_area :short_description, required: @template.is_short_description_optional?, label_class: @template.is_short_description_optional? ?  "required" : '' if @template.is_short_description? %>
@@ -30,12 +32,6 @@
     <% else %>
       <%= f.file_field :multiple_images, multiple: true, required: @template.is_multiple_images_optional?, label_class: @template.is_multiple_images_optional? ?  "required" : '' if @template.is_multiple_images? %>
     <% end %>
-
-    <%= f.text_field :google_map_link, required: @template.is_google_map_link_optional?, label_class: @template.is_google_map_link_optional? ?  "required" : '' if @template.is_google_map_link? %>
-
-    <%= f.text_field :map_location, required: @template.is_map_location_optional?, label_class: @template.is_map_location_optional? ?  "required" : '' if @template.is_map_location? %>
-
-    <%= f.text_field :location, required: @template.is_location_optional?, label_class: @template.is_location_optional? ?  "required" : '' if @template.is_location? %>
 
     <% if @template.is_mon_to_sat_on? %>
       <label>Timings</label>
@@ -68,6 +64,8 @@
 
     <%= f.text_field :entry_fee_senior_citizen, required: @template.is_entry_fee_senior_citizen_optional?, label_class: @template.is_entry_fee_senior_citizen_optional? ?  "required" : '' if @template.is_entry_fee_senior_citizen? %>
 
+      <%= f.text_field :entry_fee_foreigner, required: @template.is_entry_fee_foreigner_optional?, label_class: @template.is_entry_fee_foreigner_optional? ?  "required" : '' if @template.is_entry_fee_foreigner? %>
+
     <%= f.select :parking_type , Product::PARKING_TYPE, required: @template.is_parking_type_optional?, label_class: @template.is_parking_type_optional? ?  "required" : '' if @template.is_parking_type? %>
 
     <%= f.text_field :parking_fees, required: @template.is_parking_fees_optional?, label_class: @template.is_parking_fees_optional? ?  "required" : '' if @template.is_parking_fees? %>
@@ -77,7 +75,7 @@
     <%= f.select :product_type_id, ProductType.all.collect { |x| [x.name, x.id.to_i]}, {label: "Choose product type"} if @template.is_product_type?  %>
 
     <br>
-    <% if @resource.persisted? %>
+    <% if @resource.persisted? && @resource.categories.last.category_template.is_location? %>
       <%= render 'map' %>
     <% end %>
     <%= f.submit "Submit", class: 'btn btn-sm btn-success' %>
