--- a/app/assets/javascripts/ratyrate.js.erb
+++ b/app/assets/javascripts/ratyrate.js.erb
@@ -2,8 +2,8 @@ $.fn.raty.defaults.half = false;
 $.fn.raty.defaults.halfShow = true;
 $.fn.raty.defaults.path = "/assets";
 $.fn.raty.defaults.cancel = false;
-
-$(function(){
+function initstars(argument) {
+  // body...
   $(".star").each(function() {
     var $readonly = ($(this).attr('data-readonly') == 'true');
     var $half     = ($(this).attr('data-enable-half') == 'true');
@@ -59,4 +59,11 @@ $(function(){
       }
     });
   });
+}
+$( document ).ready(function() {
+  initstars();
 });
+$(document).on('turbolinks:load', function() {
+  initstars();
+});
+
