--- a/app/views/products/_map.html.erb
+++ b/app/views/products/_map.html.erb
@@ -37,7 +37,7 @@
 
       <div class="form-group">
         <label>Pincode</label>
-        <input class="form-control" type="text" value='<%= @resource.pincode %>'  id="product_pincode">
+        <input readonly="readonly" class="form-control" type="text" value='<%= @resource.pincode %>'  id="product_pincode">
       </div>
     </div>
   </div>
