--- a/app/views/products/liked_by_user.js.erb
+++ b/app/views/products/liked_by_user.js.erb
@@ -1,2 +1,2 @@
 $('.product_like').attr({ src: "<%= asset_path('liked.png') %>" });
-$('.like_count').html('<%= @resource.get_likes.size %>');
+$('.like_count').html('<b>likes: </b><%= @resource.get_likes.size %>');
