reolved issue in rating comment

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -30,3 +30,6 @@ $primary-color-hover: rgba(209,209,240,0.2);
 .rating_comment_user_info{
   font-size: 14px;
 }
+img.raty-cancel {
+  display: none;
+}
