resolved issue of rating comment is not working

--- a/app/views/products/_rating_comment.html.erb
+++ b/app/views/products/_rating_comment.html.erb
@@ -1,12 +1,7 @@
 <% rates.each do |rate| %>
   <div>
-    <% (1..5).each do |i| %>
-      <% if i <= rate.stars.to_i %>             
-        <%= image_tag("/images/ratyrate/star-on.png") %>
-      <% else %>
-      <%= image_tag("/images/ratyrate/star-off.png") %>
-      <% end %>
-    <% end %><br>
+    <%= render "products/rating_star_image", rate: rate %>
+    <br>
     <h5><b><%= rate.comment %></b></h5>
     <span class= "rating_comment_user_info">By <%= rate.rater.name %> on <%= rate.created_at.strftime('%d %B %Y') %></span>
     <br>
