--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -72,17 +72,26 @@
 
     <%= f.select :product_type_id, ProductType.all.collect { |x| [x.name, x.id.to_i]}, {label: "Choose product type"} if @template.is_product_type?  %>
 
-    <% if @template.is_allow_like? %>
       <div class="row">
-        <div class="col-4">
-          <%= f.check_box :allow_like %>
-        </div>
+        <% if @template.is_allow_like? %>
+          <div class="col-3">
+            <%= f.check_box :allow_like %>
+          </div>
 
-        <div class="col-4">
-          <%= f.check_box :view_likes %>
-        </div>
+          <div class="col-3">
+            <%= f.check_box :view_likes %>
+          </div>
+        <% end %>
+        <% if @template.is_allow_comment? %>
+          <div class="col-3">
+            <%= f.check_box :allow_comment %>
+          </div>
+
+          <div class="col-3">
+            <%= f.check_box :view_comments %>
+          </div>
+        <% end %>
       </div>
-    <% end %>
 
     <br>
     <% if @resource.persisted? && @resource.categories.last.category_template.is_location? %>
