--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -20,7 +20,7 @@
       <% end %>
     </div>
     <% if current_user.admin? %>
-      <%= link_to  "New Product", new_product_path(category_id: params[:category_id]), class: "btn  btn-outline-secondary btn-sm float-right mb-2" %>
+      <%= link_to  "New Product", new_product_path(category_id: params[:category_id]), class: "btn  btn-outline-secondary btn-sm float-right mb-2" if is_category? %>
     <% end %>
   <% if @resources.present? %>
     <table class=" table table-striped sortable">
