--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -20,6 +20,7 @@
           <li class="nav-item"><%= link_to 'Nearby products', show_nearby_products_products_path, class: 'nav-link' %></li>
         <% end %>
         <li class="nav-item"><%= link_to 'Products', products_path, class: 'nav-link' %></li>
+        <li class="nav-item"><%= link_to 'Clients', users_path, class: 'nav-link' if current_user.user? %></li>
       <% end %>
     </ul>
     <% if user_signed_in? %>
