itinerary listing and itinerary schedule crud

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -19,6 +19,7 @@
         <% else %>
           <li class="nav-item"><%= link_to 'Nearby products', show_nearby_products_products_path, class: 'nav-link' %></li>
           <li class="nav-item"><%= link_to 'Transport Type', transport_types_path, class: 'nav-link' %></li>
+          <li class="nav-item"><%= link_to 'Itineraries', itineraries_path, class: 'nav-link' %></li>
         <% end %>
         <li class="nav-item"><%= link_to 'Products', products_path, class: 'nav-link' %></li>
       <% end %>
