--- a/app/views/itineraries/index.html.erb
+++ b/app/views/itineraries/index.html.erb
@@ -1,2 +1,40 @@
-<h1>Itineraries#index</h1>
-<p>Find me in app/views/itineraries/index.html.erb</p>
+<div class="container">
+  <h2>Itinerary Listing</h2>
+  <div class="col-12">
+    <% if current_user.user? %>
+      <%= link_to "New Itinerary", new_itinerary_path, class: "btn  btn-outline-secondary btn-sm float-right mb-2" %>
+    <% end %>
+  </div>
+  <table class=" table table-striped sortable">
+    <thead>
+      <tr>
+        <th>Itinerary name</th>
+        <th>From/To date/Duration</th>
+        <th>Members</th>
+        <th>Status</th>
+        <th>Client</th>
+        <th>Price</th>
+        <th colspan="2">Action</th>
+        
+      </tr>
+    </thead>
+    <tbody>
+      <% @resources.each do |itinerary| %>
+        <tr>
+          <td><%= link_to itinerary.name, itinerary_path(itinerary) %></td>
+          <td><%= itinerary.start_date ?  itinerary.start_date.strftime("%d %b")+'-'+itinerary.end_date.strftime("%d %b")+' /'+itinerary.duration+' '+itinerary.duration_type : itinerary.duration+' '+itinerary.duration_type %></td>
+          <td><%= itinerary.members%></td>
+          <td><%= itinerary.status %></td>
+          <td><%= itinerary.client.name %></td>
+          <td><%= itinerary.price %></td>
+          <td><%= link_to("View", itinerary_path(itinerary)) %></td>
+          <td><%= link_to "Delete", itinerary_path(itinerary), method: :delete, data: {confirm: "Are you sure?"} %></td>
+
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+  <div id="paginate">
+    <%= paginate @resources, theme: 'twitter-bootstrap-4' %>
+  </div>
+</div>
