--- a/app/views/itineraries/show.html.erb
+++ b/app/views/itineraries/show.html.erb
@@ -52,31 +52,45 @@
 </div>
 <br>
 <% @duration_count =  @resource.duration_type == "Hours" ? 1 : @resource.duration.to_i  %>
-<%= bootstrap_form_tag  do |f| %>
+<%= form_tag({controller: :itineraries, action: :create_itinerary_schedules}   ,{method: :post})  do |f| %>
   <% for i in 1..@duration_count %>
     <div class="row">
       <div class="col-6">
         <div class="card">
           <div class="card-header">
-            Day <%= i %> - <b><%= (@resource.start_date.to_date+i-1).strftime("%d %B %Y") %></b>
+            Day <%= i %> - <b><%= @resource.start_date ? (@resource.start_date.to_date+i-1).strftime("%d %B %Y") : '' %></b>
           </div>
           <div class="card-body">
 
             <div class="row">
-              <div class="col-4">
-                <%= f.time_field :pickup_time, hide_label: true %>
+              <div class="col-6">
+                <div class="row">
+                  <div class="col-6 mt-2">
+                    <label>Pickup Time:</label>
+                  </div>
+                  <div class="col-6">
+                    <%= time_field_tag "itinerary_schedules[#{i}][pickup_time]", @resource&.itinerary_schedules[i-1]&.pickup_time&.strftime("%H:%M"), class: "form-control" %>
+                  </div>
+                </div>
               </div>
-              <div class="col-8"> 
-                <%= f.text_field :pickup_location, hide_label: true, placeholder: 'Pickup location' %>
+              <div class="col-6"> 
+                <%= text_field_tag "itinerary_schedules[#{i}][pickup_location]" ,@resource&.itinerary_schedules[i-1]&.pickup_location, class: 'form-control', placeholder: 'Pickup location' %>
               </div>
             </div>
-
+            <br>
             <div class="row">
-              <div class="col-4">
-                <%= f.time_field :drop_time, hide_label: true %>
+              <div class="col-6">
+                <div class="row">
+                  <div class="col-6 mt-2">
+                    <label>Drop Time:</label>
+                  </div>
+                  <div class="col-6">
+                    <%= time_field_tag "itinerary_schedules[#{i}][drop_time]", @resource&.itinerary_schedules[i-1]&.drop_time&.strftime("%H:%M"), class: "form-control" %>
+                  </div>
+                </div>
               </div>
-              <div class="col-8"> 
-                <%= f.text_field :drop_location, hide_label: true, placeholder: 'Drop location' %>
+              <div class="col-6"> 
+                <%= text_field_tag "itinerary_schedules[#{i}][drop_location]",@resource&.itinerary_schedules[i-1]&.drop_location, class: 'form-control', placeholder: 'Drop location' %>
               </div>
             </div>
           </div>
@@ -84,6 +98,7 @@
       </div>
     </div><br>
   <% end %>
+  <%= submit_tag 'Add', class: 'btn btn-primary' %>
 <% end %>
 
 
