--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -19,53 +19,24 @@
         </div>
       <% end %>
     </div>
+  
     <% if current_user.admin? %>
       <%= link_to  "New Product", new_product_path(category_id: params[:category_id]), class: "btn  btn-outline-secondary btn-sm float-right mb-2" if is_category? %>
     <% end %>
-  <% if @resources.present? %>
-    <table class=" table table-striped sortable">
-      <thead>
-        <tr>
-          <th>Name</th>
-          <th>Price</th>
-          <th>Categories</th>
-          <th colspan="3">Actions</th>
-        </tr>
-      </thead>
-      <tbody>
-        <% @resources.each do |product| %>
-          <tr>
-            <td><%= link_to product.name, product_path(product) %></td>
-            <td><%= (product.currency.present? ? product.currency : '')  + product.price.to_s %></td>
-            <td><%= product.categories.present? ? product.categories.map { |e| e.name }.join(', ') : 'No category selected' %></td>
-            <td><%= link_to("View", product_path(product)) %></td>
-            <% if current_user.admin? %>
-            <td><%= link_to("Edit", edit_product_path(product)) %></td>
-            <td><%= link_to "Delete", product_path(product), method: :delete, data: {confirm: "Are you sure?"} %></td>
-            <% end %>
-          </tr>
-        <% end %>
-      </tbody>
-    </table>
-
-    <div id="paginate">
-      <%= paginate @resources, theme: 'twitter-bootstrap-4' %>
-    </div>
-
-  <% else %>
-    
-    <% if current_user.admin? %>
-      <h5>No products available</h5>
+    <% if @resources.present? %>
+      <%= render 'product_listing', resources: @resources %>
     <% else %>
-
-      <div class="row">
-        <div class="col-4">
-          <h4>No products in nearby area.</h4>
+      <% if current_user.admin? %>
+        <h5>No products available</h5>
+      <% else %>
+        <div class="row">
+          <div class="col-4">
+            <h4>No products in nearby area.</h4>
+          </div>
+          <div class="col-4">
+            <%= link_to 'Change location', show_nearby_products_products_path, class: 'btn btn-outline-secondary' %>
+          </div>
         </div>
-        <div class="col-4">
-          <%= link_to 'Change location', show_nearby_products_products_path, class: 'btn btn-outline-secondary' %>
-        </div>
-      </div>
+      <% end %>
     <% end %>
-  <% end %>
 </div>
